almost 30% done, pushing now to be safe

--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<body>
-	
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Let's build your dream</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
+    </style>
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <!-- this is my header, this include 'nav bar and 1 section' -->
+    <header>
+      <nav>
+        <div class="logo"><a href="">G3 Architects</a></div>
+        <div class="nav-section">
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact Us</a></li>
+            <li><a href="">Login</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="header-sect">
+        <div class="header-sect-txt-mes">
+          <h1>Brand New <br> Group of Architects</h1>
+          <p>
+            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+          </p>
+					<button>Explore More</button>
+        </div>
+        <img src="images/banner.png" alt="" />
+      </div>
+    </header>
+    <!-- Our header end here -->
+  </body>
 </html>
