--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
       @import url("https://fonts.googleapis.com/css2?family=Work+Sans&display=swap");
     </style>
     <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/responsib.css">  
   </head>
   <body>
     <!-- this is my header, this include 'nav bar and 1 section' -->
     <header>
       <nav>
-        <div class="logo"><a href="">G3 Architects</a></div>
+        <div class="logo"><a href="">G<span>3</span> Architects</a></div>
         <div class="nav-section">
           <ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><a href="">Contact</a></li>
             <li><a href="">Login</a></li>
           </ul>
         </div>
@@ -28,7 +29,7 @@
         <div class="header-sect-txt-mes">
           <h1>Brand New <br> Group of Architects</h1>
           <p>
-            There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+            A wonderful serenity has taken possession of my entire soul, like these sweet mornings of spring which I enjoy with my whole heart. I am alone, and feel the charm of existence in end.
           </p>
 					<button>Explore More</button>
         </div>
@@ -36,5 +37,118 @@
       </div>
     </header>
     <!-- Our header end here -->
+    <main>
+      <!-------------------
+         Our feature intro start here 
+      ---------------------->
+        <div class="features">
+          <div class="feature-employee-img">
+            <img src="images/team1.png" alt="">
+            <img src="images/team2.png" alt="">
+            <img src="images/team3.png" alt="">
+            <img src="images/team4.png" alt="">
+          </div>
+          <div class="feature-intro-text">
+            <h1>Quick list <span class="of-our-text">of Our</span> <span class="features-text">Features</span> </h1>
+            <p>The quick, brown fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog. Junk MTV quiz graced by fox whelps. Bawds jog, flick quartz, vex nymphs. Waltz, bad n</p>
+            <div class="btn-feature">
+            <button class="feature-intro-btn">Explore More</button>
+          </div>  
+          </div>
+        </div>
+      <!-- Our feature intro end  here -->
+
+      <!-------------------------
+        Our Details feature start here  
+       ------------------------->
+       <div class="all-feature">
+        <div class="feature-introduce">
+          <h1>Features you will <br> <span class="love">love</span> & <span class="enjoy">enjoy</span></h1>
+          <p>Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li</p>
+          <div class="feature-list">
+            <div class="feature-item">
+              <h2>Desktop & Mobile Version</h2>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the syst...........</p>
+            </div>
+            <div class="feature-item">
+              <h2>Drag & Drop Builder</h2>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the syst...........</p>
+            </div>
+            <div class="feature-item">
+              <h2>Awesome Modern Design</h2>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the syst...........</p>
+            </div>
+            <div class="feature-item">
+              <h2>Super Easy to Edit</h2>
+              <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the syst...........</p>
+            </div>
+          </div>
+        </div>
+        <div class="feature-exp-btn">
+          <button><h1>10+ Years </h1> <br>experience</button>
+        </div>
+       </div>
+       <!-- our Details feature end here -->
+
+       <!--------------------------
+        some fact about us start here
+        --------------------------->
+        <section class="facts">
+          <div class="fact-intro">
+            <h1>Some Fact</h1>
+            <p>The European languages are members of the same family. Their separate existence is a myth. For science, mu</p>
+          </div>
+          <div class="facts-items">
+          <div class="fact-item1">
+            <img src="images/icons/ribon.png" alt="">
+            <p>54</p>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="fact-item1">
+            <img src="images/icons/projects.png" alt="">
+            <p>54</p>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="fact-item1">
+            <img src="images/icons/customers.png" alt="">
+            <p>54</p>
+            <p>Awards Winnings</p>
+          </div>
+          <div class="fact-item1">
+            <img src="images/icons/email.png" alt="">
+            <p>54</p>
+            <p>Awards Winnings</p>
+          </div>
+          </div>
+        </section>
+        <!-- our fact end here -->
+
+        <!-----------------------
+          our sponsor section start here
+         ---------------------->
+         <section class="sponsor">
+          <div class="sponsor-detail">
+            <h1>Our Sponsor</h1>
+            <p>The European languages are members of the same family. Their separate existence is a myth. For science, mu</p>
+          </div>
+          <div class="sponsor-img">
+            <img class="sponsor-img-1" src="images/sponsors/amazon.png" alt="">
+            <img src="images/sponsors/figma.png" alt="">
+            <img class="google" src="images/sponsors/google.png" alt="">
+            <img src="images/sponsors/spotify.png" alt=""> 3
+          </div>
+         </section>
+         <!-- our sponsor section end here -->
+         <footer>
+            <p>
+              All rights reserved copyright@2023 startup landing page design
+            </p>
+            <div class="footer-form">
+              <h4>Let's Talk</h4><br>
+              <input class="form" type="email" name="" id="" placeholder="enter your email"><br><br>
+              <button class="sub-btn">Submit</button>
+            </div>
+         </footer>
+    </main>
   </body>
 </html>
