Ohh, Finally-Finally done.

--- a/index.html
+++ b/index.html
@@ -106,18 +106,18 @@
           </div>
           <div class="fact-item1">
             <img src="images/icons/projects.png" alt="">
-            <p>54</p>
-            <p>Awards Winnings</p>
+            <p>1454</p>
+            <p>Project Finised</p>
           </div>
           <div class="fact-item1">
             <img src="images/icons/customers.png" alt="">
-            <p>54</p>
-            <p>Awards Winnings</p>
+            <p>540</p>
+            <p>Clined Worked</p>
           </div>
           <div class="fact-item1">
             <img src="images/icons/email.png" alt="">
-            <p>54</p>
-            <p>Awards Winnings</p>
+            <p>209436</p>
+            <p>Email Send</p>
           </div>
           </div>
         </section>
